# services

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/: __init__.py  packaging.py
nagare/services/: __init__.py  config.py  dependencies.py  exceptions.py  plugin.py  plugins.py  proxy.py  reporters.py  service.py  services.py
nagare/services/tests/: __init__.py  dependencies_test.py  plugins.cfg  plugins_test.py  services.cfg  services_test.py
nagare/services/tests/entry_points/nagare_services.egg-info/: entry_points.txt
nagare/services/tests/nagare_services.egg/EGG-INFO/: entry_points.txt
src/nagare/: __init__.py  packaging.py
src/nagare/services/: __init__.py  exceptions.py  plugin.py  plugins.py  proxy.py  reporters.py  services.py
src/nagare/services/tests/: METADATA  __init__.py  dependencies_test.py  plugins.cfg  plugins_test.py  services_test.py
