[metadata]
name = nagare-services
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Dependencies and services injection
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services
    Tracker = https://github.com/nagareproject/services/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-config

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
